resolve commentsž